fix: Fixed american-english spelling.

--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -9,8 +9,8 @@
     {
       \begin{cvitems}
         \item {A \textbf{REST API} built with \textbf{ASP.NET} and \textbf{PSQL}, designed to connect anonymous users and create listings for public events.}
-        \item {Implements modern authentication and authorisation without helper libraries, i.e. \textbf{JWT}}
-        \item {Utilises security features, e.g. Salting and hashing of a users password for protection from rainbow tables.}
+        \item {Implements modern authentication and authorisation without helper libraries, i.e., \textbf{JWT}}
+        \item {Utilises security features, e.g., Salting and hashing of a users password for protection from rainbow tables.}
       \end{cvitems}
     }
 
