chore: Updated location and contact information.

--- a/resume.tex
+++ b/resume.tex
@@ -37,12 +37,13 @@
 % \photo[rectangle,edge,right]{profile}
 \name{Henry}{Gann}
 \position{Software Engineer}
-\address{Auckland, New Zealand}
+\address{Melbourne, Victoria}
 
 \email{henry.gann@gmail.com}
 \homepage{henrygann.dev}
 \github{HenryGann}
-% \linkedin{josiah-bull}
+\linkedin{henry-gann}
+\mobile{0490 666 022}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
