chore: Updated all sections to be more current.

--- a/resume/achievements.tex
+++ b/resume/achievements.tex
@@ -1,11 +1,19 @@
 \cvsection{Achievements}
 
 \begin{cvhonors}
+
 	\cvhonor
-	{ACRA Research Conference Attendee}
-	{My research team was selected to attend the ACRA conference in Sydney.}
+	{AWS Certified Cloud Practitioner}
+	{Completed AWS CLF-C02 Certification}
+	{}
+	{Mar 2025}
+
+	\cvhonor
+	{ACRA Research Conference}
+	{Attended ACRA research conference regarding use of simulation based data used to \textbf{train ML models - YOLOv8 and CNNs}}
 	{}
 	{Dec 2023}
+
 
 	\cvhonor
 	{Dean's List}
