--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -2,42 +2,43 @@
 
 \begin{cventries}
   \cventry
-    {Software Engineer} % Job title
-    {Navico Group} % Organization
-    {Auckland, New Zealand} % Location
-    {Nov. 2022 - Present} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed and deployed several \textbf{full-stack} web apps single-handedly from scratch.}
-        \item {Set up web servers and \textbf{network infrastructure} for the R\&D department.}
-        \item {Updated and extended a large-scale \textbf{Python} automated testing platform.}
-        \item {Implemented \textbf{CI/CD} pipelines and \textbf{dockerized} projects.}
-      \end{cvitems}
-    }
+  {Software Engineer} % Job title
+  {Navico Group} % Organization
+  {Auckland, New Zealand} % Location
+  {Nov. 2022 - Present} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item Designed, implemented and deployed a \textbf{TypeScript Next.js} full-stack React app utilizing \textbf{MongoDB}
+      \item Designed, implemented and deployed a \textbf{TypeScript ExpressJS} full-stack React app utilizing \textbf{RethinkDB}
+      \item Established and deployed network infrastructure for R\&D department
+      \item Updated and extended a large-scale \textbf{Python} automated testing platform
+      \item Implemented \textbf{Jenkins CI/CD} pipelines and built \textbf{Docker} containers
+    \end{cvitems}
+  }
 
-    \cventry
-    {Software Engineering Intern} % Job title
-    {Koda Web} % Organization
-    {Auckland, New Zealand} % Location
-    {Feb. 2022 - June 2022} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item Updated and patched legacy \textbf{Visual Basic} codebase.
-        \item Implemented \textbf{backend} endpoints for clients relating to the transfer of data from hardware via serial port.
-        \item Developed \textbf{UI/UX} drawings and implemented them using \textbf{React}.
-      \end{cvitems}
-    }
+\cventry
+  {Software Engineering Intern} % Job title
+  {Koda Web} % Organization
+  {Auckland, New Zealand} % Location
+  {Feb. 2022 - June 2022} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item Updated and patched legacy \textbf{Visual Basic} codebase
+      \item Implemented \textbf{ExpressJS} endpoints
+      \item Implemented React class components based on Figma UI/UX drawings using \textbf{JavaScript}
+    \end{cvitems}
+  }
 
-  \cventry
-    {Software Engineering Intern} % Job title
-    {Navico Group} % Organization
-    {Auckland, New Zealand} % Location
-    {Nov. 2021 - Feb. 2022} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item Implemented a \textbf{Unity} simulation related to testing prototype hardware.
-        \item Collaborated as a team to implement a large-scale \textbf{Python} project that pooled together data simulators using a GUI.
-      \end{cvitems}
-    }
+\cventry
+  {Software Engineering Intern} % Job title
+  {Navico Group} % Organization
+  {Auckland, New Zealand} % Location
+  {Nov. 2021 - Feb. 2022} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item Implemented a \textbf{C\# Unity} simulation related to testing prototype hardware
+      \item Collaborated as a team to implement a large-scale \textbf{Python} project for data simulation
+    \end{cvitems}
+  }
 
 \end{cventries}
