--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,8 +1,23 @@
 \cvsection{Projects}
 
 \begin{cventries}
+
   \cventry
-    {\href{https://github.com/HenryGann/PartyTime}{\faLink \space https://github.com/HenryGann/PartyTime}}
+  {\href{https://github.com/HenryGann/shortstack}{\faGithub  \space https://github.com/HenryGann/shortstack}  \href{https://github.com/HenryGann/shortstack-api}{\faGithub  \space https://github.com/HenryGann/shortstack-api}} % Empty position
+  {Shortstack} % Project
+  {} % Empty location
+  {March 2025} % Empty date
+  {
+    \begin{cvitems} % Description(s) bullet points
+      \item{A full‑stack url shortener app deployed on \textbf{AWS Lambda, DynamoDB and EC2}}
+      \item{Backend built with \textbf{GraphQL, Apollo} Server, \textbf{TypeScript DynamoDB} Client and deployed using \textbf{serverless framework}}
+      \item{Frontend built with \textbf{NextJS, React, TailwindCSS} and \textbf{NodeJS}}
+    \end{cvitems}
+  }
+
+
+  \cventry
+    {\href{https://github.com/HenryGann/PartyTime}{\faGithub \space https://github.com/HenryGann/PartyTime}}
     {PartyTime}
     {}
     {March - April 2024} % TODO: date
@@ -14,20 +29,10 @@
       \end{cvitems}
     }
 
-  \cventry
-    {\href{https://github.com/HenryGann/SocketRouting}{\faLink \space https://github.com/HenryGann/SocketRouting}} % Empty position
-    {SocketRouting} % Project
-    {} % Empty location
-    {April - May 2024} % Empty date
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Implements an HTTP server written entirely from scratch using \textbf{C}. }
-        \item {Hndles dynamic routing of routes within src folder and any non-existent routes as well as \textbf{css} files. }
-      \end{cvitems}
-    }
+
 
   \cventry
-  {\href{https://github.com/HenryGann/Seafarers}{\faLink \space https://github.com/HenryGann/Seafarers}} % Empty position
+  {\href{https://github.com/HenryGann/Seafarers}{\faGithub \space https://github.com/HenryGann/Seafarers}} % Empty position
   {Seafarers} % Project
   {} % Empty location
   {June. 2022} % Empty date
