--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -3,8 +3,8 @@
 \begin{cvskills}
   \cvskill
     {Programming Languages:} % Type
-    {Rust, Python, JavaScript/TypeScript, Bash} % Skillset
+    {Rust, Python, JavaScript/TypeScript, Java, C\#\ Bash} % Skillset
   \cvskill
     {Applications and Software:} % Type
-    {Linux, Docker/Docker-Compose, Jenkins, Git, SQL/NoSQL} % Skillset
+    {AWS, Lambda, Linux, Docker/Docker‑Compose, Jenkins, Git, SQL/NoSQL, GraphQL} % Skillset
 \end{cvskills}
